Use already built image in Trivy

--- a/.github/workflows/build_push_terra.yml
+++ b/.github/workflows/build_push_terra.yml
@@ -105,6 +105,7 @@ jobs:
           password: "${{ steps.gcp-auth.outputs.access_token }}"
 
       - name: Build Docker image
+        id: build
         uses: docker/build-push-action@v5
         with:
           load: true
@@ -115,6 +116,8 @@ jobs:
 
       - name: Run Trivy vulnerability scanner
         uses: broadinstitute/dsp-appsec-trivy-action@v1
+        with:
+          image: ${{ steps.build.outputs.imageid }}
 
       - name: Push Docker image
         run: |
