--- a/.github/workflows/build_push_terra.yml
+++ b/.github/workflows/build_push_terra.yml
@@ -23,6 +23,8 @@ on:
       - "public/**"
       - "src/**"
       - ".github/workflows/build_push_terra.yml"
+  schedule:
+    - cron: "30 12 * * 1"
 
 env:
   # Delete me when ready to merge dev back into main
