--- a/.github/workflows/build_push_terra.yml
+++ b/.github/workflows/build_push_terra.yml
@@ -114,6 +114,9 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           load: true
+          build-args: |
+            APP_VERSION=${{ needs.generate-tag.outputs.tag }}
+            BUILD_VERSION=${{ github.sha }}-${{ github.run_attempt }}
           cache-from: type=gha,scope=${{ github.ref_name }}
           cache-to: type=gha,scope=${{ github.ref_name }},mode=max
           tags: ${{ steps.meta.outputs.tags }}
