--- a/.github/workflows/build_push_terra.yml
+++ b/.github/workflows/build_push_terra.yml
@@ -32,7 +32,7 @@ concurrency:
 
 env:
   # Delete me when ready to merge dev back into main
-  TARGET_BRANCH: dev
+  TARGET_BRANCH: main
   # Google project where artifacts are uploaded.
   GOOGLE_PROJECT: dsp-artifact-registry
   # Name of the app-specific Docker repository configured in GOOGLE_PROJECT.
@@ -150,7 +150,7 @@ jobs:
     # Put new version in Broad dev environment
     uses: broadinstitute/sherlock/.github/workflows/client-set-environment-app-version.yaml@main
     needs: [build-and-publish, report-to-sherlock, generate-tag]
-    if: ${{ github.ref_name == 'dev' }}
+    if: ${{ github.ref_name == 'main' }}
     with:
       new-version: ${{ needs.generate-tag.outputs.tag }}
       chart-name: "sfkitui"
