[sfkit] Enable Auto Deploy to Terra Dev upon Merge to main (#6)
* enable auto deploying to terra  dev for the sfkit react repo

* this repo actually uses the main branch

--- a/.github/workflows/build_push_terra.yml
+++ b/.github/workflows/build_push_terra.yml
@@ -32,7 +32,7 @@ concurrency:
 
 env:
   # Delete me when ready to merge dev back into main
-  TARGET_BRANCH: dev
+  TARGET_BRANCH: main
   # Google project where artifacts are uploaded.
   GOOGLE_PROJECT: dsp-artifact-registry
   # Name of the app-specific Docker repository configured in GOOGLE_PROJECT.
@@ -143,8 +143,22 @@ jobs:
     uses: broadinstitute/sherlock/.github/workflows/client-report-app-version.yaml@main
     needs: [build-and-publish, generate-tag]
     with:
-      chart-name: "sfkitwebsite"
+      chart-name: "sfkitui"
       new-version: ${{ needs.generate-tag.outputs.tag }}
     permissions:
       contents: "read"
+      id-token: "write"
+  
+  set-version-in-terra-dev:
+    # Put new version in Broad dev environment
+    uses: broadinstitute/sherlock/.github/workflows/client-set-environment-app-version.yaml@main
+    needs: [build-and-publish, report-to-sherlock, generate-tag]
+    if: ${{ github.ref_name == 'main' }}
+    with:
+      new-version: ${{ needs.generate-tag.outputs.tag }}
+      chart-name: "sfkitui"
+      environment-name: "dev"
+    secrets:
+      sync-git-token: ${{ secrets.BROADBOT_TOKEN }}
+    permissions:
       id-token: "write"
