--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,8 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "script-src 'self'; object-src 'none'; require-trusted-types-for 'script';" always;
+    add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
 
     location / {
         root   /usr/share/nginx/html;
