--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen       8080;
     server_name  localhost;
+    server_tokens off;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
