Csp headers; env variables for vite auth  (#7)
* add csp and permissions-policy headers for extra security

* fix env variables; server_tokens off in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server {
     listen       8080;
     server_name  localhost;
+    server_tokens off;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -8,6 +9,8 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Content-Security-Policy "script-src 'self'; object-src 'none'; require-trusted-types-for 'script';" always;
+    add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
 
     location / {
         root   /usr/share/nginx/html;
