--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,10 @@ server {
     add_header Content-Security-Policy "script-src 'self'; object-src 'none'; require-trusted-types-for 'script';" always;
     add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
 
+    # Cache control headers
+    add_header Cache-Control "no-store" always;
+    add_header Pragma "no-cache" always;
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
