--- a/nginx.conf
+++ b/nginx.conf
@@ -13,14 +13,16 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Cache control headers
-    add_header Cache-Control "no-store" always;
-    add_header Pragma "no-cache" always;
+    location = / {
+        add_header Cache-Control "no-store" always;
+    }
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
+
+        add_header Cache-Control "max-age=31536000, immutable" always;
     }
 
     location /status {
