--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ server {
     server_tokens off;
 
     # Security headers
-    add_header Content-Security-Policy "script-src 'self'; object-src 'none'; require-trusted-types-for 'script';" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
     add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Server "Apache" always;
