Return 404 for Cloud Metadata endpoint

--- a/nginx.conf
+++ b/nginx.conf
@@ -25,7 +25,11 @@ server {
         add_header Cache-Control "max-age=31536000, immutable" always;
     }
 
-    location /status {
+    location = /latest/meta-data/ {
+        return 404;
+    }
+
+    location = /status {
         return 200;
         access_log off;
     }
