--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
 
     location = / {
-        add_header Cache-Control "no-store" always;
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
     }
 
     location / {
