Adjust max-age for site icon

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,16 +13,20 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    location = / {
-        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
-    }
-
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
 
         add_header Cache-Control "max-age=31536000, immutable" always;
+    }
+
+    location = / {
+        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+    }
+
+    location = /dna.webp {
+        add_header Cache-Control "max-age=86400" always;
     }
 
     location = /latest/meta-data/ {
