Fix caching headers

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,23 +13,24 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
+    # Caching headers
+    add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
 
-        add_header Cache-Control "max-age=31536000, immutable" always;
+        location /assets {
+            add_header Cache-Control "max-age=31536000, immutable" always;
+        }
+
+        location = /dna.webp {
+            add_header Cache-Control "max-age=86400" always;
+        }
     }
 
-    location = / {
-        add_header Cache-Control "no-cache, no-store, must-revalidate" always;
-    }
-
-    location = /dna.webp {
-        add_header Cache-Control "max-age=86400" always;
-    }
-
-    location = /latest/meta-data/ {
+    location /latest/meta-data {
         return 404;
     }
 
