Turn off /version access log

--- a/nginx.conf
+++ b/nginx.conf
@@ -28,6 +28,10 @@ server {
         location = /dna.webp {
             add_header Cache-Control "max-age=86400" always;
         }
+
+        location = /version {
+            access_log off;
+        }
     }
 
     location /latest/meta-data {
