Fix header assignments and remove extra locations

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,33 +1,29 @@
+map $request_uri $cache_control {
+    default     "no-cache, no-store, must-revalidate";
+    ~^/assets   "max-age=31536000, immutable";
+}
+
 server {
     listen       8080;
     server_name  localhost;
     server_tokens off;
 
-    # Security headers
+    # Security
     add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
     add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Server "Apache" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
 
-    # Caching headers
-    add_header Cache-Control "no-cache, no-store, must-revalidate" always;
+    # Caching
+    add_header Cache-Control $cache_control always;
 
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
         try_files $uri $uri/ /index.html;
-
-        location /assets {
-            add_header Cache-Control "max-age=31536000, immutable" always;
-        }
-
-        location = /dna.webp {
-            add_header Cache-Control "max-age=86400" always;
-        }
 
         location = /version {
             access_log off;
@@ -39,12 +35,7 @@ server {
     }
 
     location = /status {
-        return 200;
         access_log off;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+        return 200;
     }
 }
