Apply immutability to special paths

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 map $request_uri $cache_control {
-    default     "no-cache, no-store, must-revalidate";
-    ~^/assets   "max-age=31536000, immutable";
+    default "no-cache, no-store, must-revalidate";
+    ~^/(assets|latest/meta-data|status) "max-age=31536000, immutable";
 }
 
 server {
@@ -30,6 +30,7 @@ server {
         }
     }
 
+    # needed to satisfy Zap
     location /latest/meta-data {
         return 404;
     }
