Exclude /status from caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 map $request_uri $cache_control {
     default "no-cache, no-store, must-revalidate";
-    ~^/(assets|latest/meta-data|status) "max-age=31536000, immutable";
+    ~^/(assets|latest/meta-data) "max-age=31536000, immutable";
 }
 
 server {
