Add Permissions-Policy always

--- a/nginx.conf
+++ b/nginx.conf
@@ -20,7 +20,7 @@ server {
 
     # Security
     add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' $connect_src; font-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
-    add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
+    add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
     add_header X-Content-Type-Options "nosniff" always;
