Use http Host for connect_src

--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ map $request_uri $cache_control {
     ~^/(assets|latest/meta-data) "max-age=31536000, immutable";
 }
 
-map $host $connect_src {
+map $http_host $connect_src {
     default "";
     ~^dev.sfkit.org "https://sfkit-website-dev-bhj5a4wkqa-uc.a.run.app";
     ~^sfkit.org "https://sfkit-website-bhj5a4wkqa-uc.a.run.app";
