Restore server_name

--- a/nginx.conf
+++ b/nginx.conf
@@ -13,6 +13,7 @@ map $http_host $connect_src {
 
 server {
     listen       8080;
+    server_name  localhost;
     server_tokens off;
 
     # Caching
