--- a/nginx.conf
+++ b/nginx.conf
@@ -11,9 +11,15 @@ map $http_host $connect_src {
     ~^sfkit.terra.bio "https://sfkit.dsde-prod.broadinstitute.org";
 }
 
+log_format  my_host  'host: $host; hostname: $hostname; http_host: $http_host; $remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
 server {
     listen       8080;
     server_tokens off;
+
+    access_log  /var/log/nginx/access.log  my_host;
 
     # Caching
     add_header Cache-Control $cache_control always;
