--- a/nginx.conf
+++ b/nginx.conf
@@ -3,29 +3,15 @@ map $request_uri $cache_control {
     ~^/(assets|latest/meta-data) "max-age=31536000, immutable";
 }
 
-map $http_host $connect_src {
-    default "";
-    ~^dev.sfkit.org "https://sfkit-website-dev-bhj5a4wkqa-uc.a.run.app";
-    ~^sfkit.org "https://sfkit-website-bhj5a4wkqa-uc.a.run.app";
-    ~^sfkitui.dsde-dev.broadinstitute.org "https://sfkit.dsde-dev.broadinstitute.org";
-    ~^sfkit.terra.bio "https://sfkit.dsde-prod.broadinstitute.org";
-}
-
-log_format  my_host  'host: $host; hostname: $hostname; http_host: $http_host; $remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
 server {
     listen       8080;
     server_tokens off;
-
-    access_log  /var/log/nginx/access.log  my_host;
 
     # Caching
     add_header Cache-Control $cache_control always;
 
     # Security
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' $connect_src; font-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' https://sfkit-website-dev-bhj5a4wkqa-uc.a.run.app https://sfkit-website-bhj5a4wkqa-uc.a.run.app https://sfkit.dsde-dev.broadinstitute.org https://sfkit.dsde-prod.broadinstitute.org; font-src 'self'; img-src 'self'; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
     add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
