Add Orch URLs to connect-src

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
     add_header Cache-Control $cache_control always;
 
     # Security
-    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' https://sfkit-website-dev-bhj5a4wkqa-uc.a.run.app https://sfkit-website-bhj5a4wkqa-uc.a.run.app https://sfkit.dsde-dev.broadinstitute.org https://sfkit.dsde-prod.broadinstitute.org; font-src 'self'; img-src 'self' blob:; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' https://sfkit-website-dev-bhj5a4wkqa-uc.a.run.app https://sfkit-website-bhj5a4wkqa-uc.a.run.app https://sfkit.dsde-dev.broadinstitute.org https://sfkit.dsde-prod.broadinstitute.org https://firecloud-orchestration.dsde-dev.broadinstitute.org https://firecloud-orchestration.dsde-prod.broadinstitute.org; font-src 'self'; img-src 'self' blob:; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
     add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
