[SMC-4] Tweak Nginx config to address ZAP issues (#44)
* Tweak security headers

* Adjust cache headers

* Expand CSP header

* Add nginx.conf to GitHub Actions trigger

* Return 404 for Cloud Metadata endpoint

* Update Cache-Control

* Adjust max-age for site icon

* Fix caching headers

* Turn off /version access log

* Fix header assignments and remove extra locations

* Apply immutability to special paths

* Cleanup

* Further cleanup

* Exclude /status from caching

* Add minimal robots.txt and sitemap.xml

* Add font-src and connect-src to CSP

* Use a map for connect-src assignment

* Add Permissions-Policy always

* Use http Host for connect_src

* Restore server_name

* Remove server_name

* Temp log host, hostname and host header

* Hard-code connect-src since host is not preserved on Terra

* Add img-src blob:

* Add Orch URLs to connect-src

* Add Cross-Origin-Embedder-Policy header

* Use wildcard Terra APIs and allowlist a couple Google APIs in connect-src

* Remove Cross-Origin-Embedder-Policy and simplifi Google APIs connect-src

* Add youtube-nocookie to connect-src

* Move youtube-nocookie to frame-src

* Fix typo

* Fix another typo

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,34 +1,40 @@
+map $request_uri $cache_control {
+    default "no-cache, no-store, must-revalidate";
+    ~^/(assets|latest/meta-data) "max-age=31536000, immutable";
+}
+
 server {
     listen       8080;
-    server_name  localhost;
     server_tokens off;
 
-    # Security headers
+    # Caching
+    add_header Cache-Control $cache_control always;
+
+    # Security
+    add_header Content-Security-Policy "default-src 'none'; script-src 'self'; connect-src 'self' https://sfkit-website-dev-bhj5a4wkqa-uc.a.run.app https://sfkit-website-bhj5a4wkqa-uc.a.run.app https://*.dsde-dev.broadinstitute.org https://*.dsde-prod.broadinstitute.org https://*.googleapis.com; font-src 'self'; frame-src https://www.youtube-nocookie.com; img-src 'self' blob:; style-src 'self'; base-uri 'self'; form-action 'self'; require-trusted-types-for 'script';" always;
+    add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
-    add_header Content-Security-Policy "script-src 'self'; object-src 'none'; require-trusted-types-for 'script';" always;
-    add_header Permissions-Policy "accelerometer=(), camera=(), geolocation=(), gyroscope=(), magnetometer=(), microphone=(), payment=(), usb=()";
-
-    # Cache control headers
-    add_header Cache-Control "no-store" always;
-    add_header Pragma "no-cache" always;
 
     location / {
         root   /usr/share/nginx/html;
-        index  index.html index.htm;
         try_files $uri $uri/ /index.html;
+
+        location = /version {
+            access_log off;
+        }
     }
 
-    location /status {
-        return 200;
+    # needed to satisfy Zap
+    location /latest/meta-data {
+        return 404;
+    }
+
+    location = /status {
         access_log off;
-    }
-
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+        return 200;
     }
 }
